# api/controllers/aqua_control.js
@@ -4,13 +4,17 @@ var util = require('util');
 var rasp_module = require('./rasberry_control.js');
 var rasp = rasp_module();
 
+var request = require('request');
+
 module.exports = {
   aqua_info: getAquaInfo,
   aqua_light_list: getAquaLightList,
   aqua_light_get: getAquaLight,
   aqua_light_post: setAquaLight,
   aqua_cam: cam,
-  aqua_cam_post: setAquaCam
+  aqua_cam_post: setAquaCam,
+  aqua_cam_image: getCamImage,
+  aqua_cam_stream: getCamStream
 };
 /*
   Simple test api. This returns Aqua API information.
@@ -29,6 +33,7 @@ function getAquaInfo(req, res) {
 */
 function getAquaLightList(req, res) {
   console.log('====getAquaLightList module====');
+//  res.json(mockAquaLightList);
   res.json(rasp.getAquaLightListModule());
 }
 
@@ -50,14 +55,16 @@ var mockAquaLightList = {
 function getAquaLight(req, res) {
   var id = req.swagger.params.id.value;
   console.log('====getAquaLight====' + id);
-  res.json(
-    {
-      "id" : id,
-      "status" : "off",
-      "description" : id + "번등"
-    }
-  );
+  res.json(rasp.getAquaLightModule(id));
+  //  res.json(mockAquaLightResult);
 }
+
+var mockAquaLightResult = {
+    "id":"0",
+    "status":"on",
+    "description" : "0번등"
+}
+
 function setAquaLight(req, res) {
   var deviceId = req.body.id;
   var deviceOperation = req.body.operation;
@@ -69,7 +76,8 @@ function setAquaCam(req, res) {
   var deviceId = req.body.id;
   var deviceOperation = req.body.operation;
   console.log('====setAquaCam:operation===='+ deviceOperation);
-  res.json(mockOperationResult);
+//  res.json(mockOperationResult);
+  res.json(rasp.setAquaCamModule(deviceId, deviceOperation));
 }
 
 var mockOperationResult = {
@@ -82,4 +90,13 @@ function cam(req, res) {
   res.json({
        "onoffstatus" : "cam off"
   });
+}
+function getCamImage(req, res) {
+  console.log('getCamImage');
+  rasp.getCamImageStreamModule('snapshot', req, res);
+}
+
+function getCamStream(req, res) {
+  console.log('=======getCamStream=====');
+  rasp.getCamImageStreamModule('stream', req, res);
 }
